# gradle-build-scan-server

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile.claude-code  MODULE.bazel  analyze_bin.py  analyze_event_ids.py  decode.py  decode2.py  decode_all.py  dump_context.py  heuristic_decode.py  init-firewall.sh  patch_tests.sh  renovate.json  rewrite.py  search_hex_context.py  test_parse.py  test_parse2.py  test_strings.py  test_tlv.py  test_varint_string.py
.github/workflows/: run-tests.yml
.opencode/skills/capturing-gradle-payloads/: SKILL.md  capture.sh
build-scan-server/src/: BUILD.bazel  error.rs  parser.rs  primitives.rs
build-scan/cli/src/: BUILD.bazel  main.rs
build-scan/lib/src/: BUILD.bazel  assembly.rs  decompress.rs  error.rs  framing.rs  integration_test.rs  kryo.rs  lib.rs  models.rs  outer_header.rs  parser.rs  primitives.rs  varint.rs
build-scan/lib/src/events/: BUILD.bazel  basic_memory_stats.rs  build_agent.rs  build_finished.rs  build_modes.rs  build_requested_tasks.rs  build_started.rs  daemon_state.rs  encoding.rs  file_ref_roots.rs  hardware.rs  java_toolchain_usage.rs  jvm.rs  jvm_args.rs  locality.rs  mod.rs  os.rs  output_styled_text_event.rs  planned_node.rs  resource_usage.rs  scope_ids.rs  task_finished.rs  task_identity.rs  task_inputs_file_property.rs  task_inputs_file_property_root.rs  task_inputs_implementation.rs  task_inputs_property_names.rs  task_inputs_snapshotting_finished.rs  task_inputs_snapshotting_started.rs  task_inputs_value_properties.rs  task_registration_summary.rs  task_started.rs  transform_execution_finished.rs  transform_execution_request.rs  transform_execution_started.rs  transform_identification.rs
captured-output/payloads/: 20260220_213257.404-c34e0f7b-81da-4318-82a4-9a7aecc53f6c.json  20260220_213257.751-cc863fe6-4801-471d-868a-d36f44f6a57b.json  20260220_213257.939-4acbc8f0-26fa-40aa-ab89-65bcf8bb2bb8.json  20260221_004251.824-b03394a5-865d-41de-9fb8-867aef9e183a.json  20260221_004252.110-571360ea-e2c7-4477-aa66-b98e87588f4f.json  20260221_004252.268-647fee21-bb6f-4519-a2e4-d26be9447b97.json  BUILD.bazel
docs/: gradle-build-scan-binary-format.md
docs/plans/: 2026-02-18-echo-server-design.md  2026-02-18-echo-server-plan.md  2026-02-20-build-scan-parser-design.md  2026-02-20-build-scan-parser-plan.md  2026-02-20-payload-parser-design.md  2026-02-20-payload-parser-implementation.md  2026-02-21-event-id-mapping-design.md  2026-02-21-event-id-mapping-plan.md  2026-02-21-refactoring-payload-builder-design.md  2026-02-21-refactoring-payload-builder-plan.md  2026-02-21-task-centric-parser-design.md  2026-02-21-task-centric-parser.md  2026-02-22-targeted-hex-search-design.md  2026-02-22-targeted-hex-search-plan.md  2026-02-23-rust-event-stream-parser-design.md  2026-02-23-rust-event-stream-parser-plan.md  2026-02-25-task-inputs-planned-nodes-design.md  2026-02-27-final-3-event-decoders-design.md
echo-server/: BUILD.bazel  Cargo.toml
echo-server/config/src/: BUILD.bazel  lib.rs
echo-server/format/src/: BUILD.bazel
echo-server/payloads/: 20260219_215820.030-2ed22e5c-dab9-4ec7-a656-74552838de6b.json  20260219_215840.921-61e380a7-ef33-4700-93c5-f58ac984b819.json  20260219_215845.117-f182a7e8-a61d-4139-9c68-f1b9a253e91f.json  20260219_215845.269-6e00e283-49be-451b-9be7-123ca09fc768.json
echo-server/src/: BUILD.bazel  main.rs
gradle/: settings.gradle.kts
gradle/build-logic/src/main/kotlin/: buildlogic.kotlin-common-conventions.gradle.kts
gradle/gradle/: libs.versions.toml
proxy/format/src/: lib.rs
proxy/src/: BUILD.bazel  main.rs
script/: build_scan_tool.py  search_hex_context.py
src/: BUILD.bazel  main.rs  parser.rs  primitives.rs
tools/format/: BUILD.bazel
