[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22"
chrono = "0.4.42"
tokio = { version = "1.47.1", default-features = false, features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
