[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.6"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
chrono = "0.4.42"
tokio = { version = "1.47.1", default-features = false, features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
thiserror = "2.0"
flate2 = "1.0"

[dev-dependencies]
proptest = "1.0"
