load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "echo_server",
    srcs = ["src/main.rs"],
    deps = [
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:uuid",
    ],
)
