[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tower = { version = "0.5", features = ["util"] }
