load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    deps = [
        "//proxy/config/src:config",
        "//proxy/format/src:format",
        "@crates//:axum",
        "@crates//:base64",
        "@crates//:chrono",
        "@crates//:reqwest",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)
