load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "events",
    srcs = [
        "mod.rs",
        "planned_node.rs",
        "task_finished.rs",
        "task_identity.rs",
        "task_inputs_file_property.rs",
        "task_inputs_file_property_root.rs",
        "task_inputs_implementation.rs",
        "task_inputs_property_names.rs",
        "task_inputs_snapshotting_finished.rs",
        "task_inputs_snapshotting_started.rs",
        "task_inputs_value_properties.rs",
        "task_started.rs",
        "transform_execution_request.rs",
    ],
    crate_name = "events",
    crate_root = "mod.rs",
    visibility = ["//build-scan:__subpackages__"],
    deps = [
        "//build-scan/lib/src:error",
        "//build-scan/lib/src:kryo",
        "//build-scan/lib/src:varint",
    ],
)

rust_test(
    name = "events_test",
    crate = ":events",
)
