load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "events",
    srcs = [
        "basic_memory_stats.rs",
        "build_agent.rs",
        "build_finished.rs",
        "build_modes.rs",
        "build_requested_tasks.rs",
        "build_started.rs",
        "daemon_state.rs",
        "encoding.rs",
        "file_ref_roots.rs",
        "hardware.rs",
        "java_toolchain_usage.rs",
        "jvm.rs",
        "jvm_args.rs",
        "locality.rs",
        "mod.rs",
        "os.rs",
        "output_styled_text_event.rs",
        "planned_node.rs",
        "resource_usage.rs",
        "scope_ids.rs",
        "task_finished.rs",
        "task_identity.rs",
        "task_inputs_file_property.rs",
        "task_inputs_file_property_root.rs",
        "task_inputs_implementation.rs",
        "task_inputs_property_names.rs",
        "task_inputs_snapshotting_finished.rs",
        "task_inputs_snapshotting_started.rs",
        "task_inputs_value_properties.rs",
        "task_registration_summary.rs",
        "task_started.rs",
        "transform_execution_finished.rs",
        "transform_execution_request.rs",
        "transform_execution_started.rs",
        "transform_identification.rs",
    ],
    crate_name = "events",
    crate_root = "mod.rs",
    visibility = ["//build-scan:__subpackages__"],
    deps = [
        "//build-scan/lib/src:error",
        "//build-scan/lib/src:kryo",
        "//build-scan/lib/src:varint",
    ],
)

rust_test(
    name = "events_test",
    crate = ":events",
)
